<resources>
    <string name="app_name">HIDoverWifi</string>
    <string name="touch_pad">Touchpad</string>
    <string name="scroll_bar_vertical">Vertical scroll bar</string>
    <string name="settings">Settings</string>
    <string name="mouse_settings_title">Mouse</string>
    <string name="settings_network_address">Address</string>
    <string name="settings_switch_bind_interface">Bind to interface</string>
    <string name="network_settings_title">Network</string>
    <string name="settings_server_port">port</string>
    <string name="toggle_btn_ctrl">Ctrl</string>
    <string name="toggle_btn_super">🐧</string>
    <string name="toggle_btn_alt">Alt</string>
    <string name="toggle_btn_altGr">AltGr</string>
    <string name="button_description_keyboard">Show keyboard</string>
    <string name="toggle_btn_arrow_right">→</string>
    <string name="toggle_btn_arrow_down">↓</string>
    <string name="toggle_btn_arrow_left">←</string>
    <string name="toggle_btn_arrow_up">↑</string>
    <string name="button_picture_down">picture down</string>
    <string name="button_picture_up">Picture up</string>
    <string name="button_tab">Tab</string>
    <string name="EMPTY" />
    <string name="keyboard_button_enter">key enter</string>
    <string name="keyboard_button_space">Spacebar</string>
    <string name="keyboard_button_backspace">Key backspace</string>
    <string name="button_end">End</string>
    <string name="button_del">Del</string>
    <string name="button_insert">Insert</string>
    <string name="button_pos1">Pos1</string>
    <string name="settings_certificate_file_hint">Certificate File</string>
    <string name="settings_cert_passwd_hint">Certificate Password</string>
    <string name="settings_hint_keepalive_interval">Keepalive interval in seconds</string>
    <string name="settings_hint_server_password">server password</string>
    <string name="keyboard_settings_title">Keyboard</string>
    <string name="settings_keyboard_layout">Layout</string>
    <string name="clipboard_settings_title">Clipboard</string>
    <string name="settings_clipboard_copy_from_host">Copy from host</string>
    <string name="addDeviceButtonDescription">add Device</string>
    <string name="buttonCancelText">Cancel</string>
    <string name="buttonAcceptText">Accept</string>
    <string name="InputTextHintDeviceName">Device name</string>
    <string name="textHintKeepaliveSeconds">sec</string>
    <string name="deviceEditButtonDescription">edit device</string>
    <string name="deviceDeleteButtonDescription">delete device</string>
    <string name="text_public">public</string>
</resources>