<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/keyboardTopBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MousePadActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mousepadTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/settings"
            android:onClick="onSettingsClick"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dots" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/button_description_keyboard"
            android:onClick="onKeyboardClick"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/keyboard" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/backgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/buttonTab2"
            android:layout_width="56dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/button_tab"
            android:onClick="onTabClicked"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tab"
            tools:ignore="TouchTargetSizeCheck" />

        <ToggleButton
            android:id="@+id/buttonShift"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:drawableEnd="@drawable/shift"
            android:onClick="onShiftClick"
            android:paddingStart="-4dp"
            android:paddingEnd="-4dp"
            android:textOff="@string/EMPTY"
            android:textOn="@string/EMPTY"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonTab2"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <ToggleButton
            android:id="@+id/buttonCtrl"
            android:layout_width="54dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:checked="false"
            android:onClick="onCtrlClick"
            android:textOff="@string/toggle_btn_ctrl"
            android:textOn="@string/toggle_btn_ctrl"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonShift"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <ToggleButton
            android:id="@+id/buttonSuper2"
            android:layout_width="36dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:checked="false"
            android:onClick="onSuperClick"
            android:textOff="@string/toggle_btn_super"
            android:textOn="@string/toggle_btn_super"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonCtrl"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <ToggleButton
            android:id="@+id/buttonAlt2"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_marginStart="5dp"
            android:checked="false"
            android:onClick="onAltClick"
            android:textOff="@string/toggle_btn_alt"
            android:textOn="@string/toggle_btn_alt"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonSuper2"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <ToggleButton
            android:id="@+id/buttonAltGr2"
            android:layout_width="62dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:checked="false"
            android:onClick="onAltGrClick"
            android:textOff="@string/toggle_btn_altGr"
            android:textOn="@string/toggle_btn_altGr"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonAlt2"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/touch_pad"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/touch_pad_pattern"
        android:clickable="true"
        android:contentDescription="@string/touch_pad"
        android:longClickable="true"
        app:layout_constraintBottom_toTopOf="@id/buttonBar"
        app:layout_constraintEnd_toStartOf="@+id/touch_pad_scroll_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mousepadTopBar">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/touch_pad_scroll_vertical"
        android:layout_width="56dp"
        android:layout_height="0dp"
        android:layout_marginVertical="16dp"
        android:clickable="true"
        android:paddingStart="20dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@id/buttonBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/touch_pad"
        app:layout_constraintTop_toBottomOf="@id/mousepadTopBar"
        tools:ignore="TouchTargetSizeCheck">

        <View
            android:id="@+id/view"
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner"
            android:contentDescription="@string/scroll_bar_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>